fix gradient on firefox

--- a/goorchids/core/static/css/app.css
+++ b/goorchids/core/static/css/app.css
@@ -2339,13 +2339,13 @@ body.taxa #sb-title-inner a {
   content: "";
   height: 9em;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0, 0, 0, 0)), color-stop(40%, white));
-  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0) 0%, white 40%);
-  background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0) 0%, white 40%);
-  background-image: -ms-linear-gradient(top, rgba(0, 0, 0, 0) 0%, white 40%);
-  background-image: -o-linear-gradient(top, rgba(0, 0, 0, 0) 0%, white 40%);
-  background-image: linear-gradient(top, rgba(0, 0, 0, 0) 0%, white 40%);
+  background-color: rgba(255, 255, 255, 0);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0)), color-stop(40%, white));
+  background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%, white 40%);
+  background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0) 0%, white 40%);
+  background-image: -ms-linear-gradient(top, rgba(255, 255, 255, 0) 0%, white 40%);
+  background-image: -o-linear-gradient(top, rgba(255, 255, 255, 0) 0%, white 40%);
+  background-image: linear-gradient(top, rgba(255, 255, 255, 0) 0%, white 40%);
   position: absolute;
   bottom: 0;
   display: block;
